--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "i18next-browser-languagedetector": "^7.1.0",
     "lucide-react": "^0.268.0",
     "next": "13.4.16",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
