--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-i18next": "^13.1.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "sleep-promise": "^9.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
