--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-i18next": "^13.1.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
+    "sonner": "^1.0.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
