--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
     "clsx": "^2.0.0",
     "encoding": "^0.1.13",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
+    "eslint-config-next": "^14.0.2",
     "i18next": "^23.4.4",
     "i18next-browser-languagedetector": "^7.1.0",
     "lucide-react": "^0.268.0",
-    "next": "13.4.16",
+    "next": "^14.0.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^13.1.2",
     "react-select": "^5.7.4",
     "react-toastify": "^9.1.3",
